[gd_scene load_steps=41 format=2]

[ext_resource path="res://sprites/backgrounds/cave_bg_01.png" type="Texture" id=1]
[ext_resource path="res://sounds/button_click.wav" type="AudioStream" id=2]
[ext_resource path="res://entities/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/treasure_end.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/now_playing.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/retry_btn.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/tutorial_pop.wav" type="AudioStream" id=7]
[ext_resource path="res://sprites/backgrounds/cave_bg_05.png" type="Texture" id=8]
[ext_resource path="res://entities/goblin.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/cave_01.gd" type="Script" id=10]
[ext_resource path="res://sprites/mist.png" type="Texture" id=11]
[ext_resource path="res://sprites/backgrounds/cave_bg_02.png" type="Texture" id=12]
[ext_resource path="res://sprites/backgrounds/cave_bg_03.png" type="Texture" id=13]
[ext_resource path="res://sprites/tilesets.png" type="Texture" id=14]
[ext_resource path="res://sounds/lavaland.ogg" type="AudioStream" id=15]
[ext_resource path="res://sprites/backgrounds/cave_bg_04.png" type="Texture" id=16]
[ext_resource path="res://sprites/backgrounds/cave_bg_06.png" type="Texture" id=17]
[ext_resource path="res://entities/slime_green.tscn" type="PackedScene" id=18]
[ext_resource path="res://sprites/skill_03_icon.png" type="Texture" id=19]
[ext_resource path="res://fonts/futile_font.tres" type="DynamicFont" id=20]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 4, 16, 4, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 4, 16, 4, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="TileSet" id=13]
0/name = "tilesets.png 0"
0/texture = ExtResource( 14 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tilesets.png 1"
1/texture = ExtResource( 14 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tilesets.png 2"
2/texture = ExtResource( 14 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 5 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tilesets.png 3"
3/texture = ExtResource( 14 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 16, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 6 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "tilesets.png 4"
4/texture = ExtResource( 14 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 16, 16, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 7 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "tilesets.png 5"
5/texture = ExtResource( 14 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 32, 16, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 8 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "tilesets.png 6"
6/texture = ExtResource( 14 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 32, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 9 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "tilesets.png 7"
7/texture = ExtResource( 14 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 16, 32, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 10 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "tilesets.png 8"
8/texture = ExtResource( 14 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 32, 32, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 11 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "tilesets.png 9"
9/texture = ExtResource( 14 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 48, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 12 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "tilesets.png 10"
10/texture = ExtResource( 14 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 16, 48, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 3 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "tilesets.png 11"
11/texture = ExtResource( 14 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 32, 48, 16, 16 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape = SubResource( 4 )
11/shape_one_way = false
11/shape_one_way_margin = 1.0
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0
12/name = "tilesets.png 12"
12/texture = ExtResource( 14 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 64, 16, 16 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "tilesets.png 13"
13/texture = ExtResource( 14 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 16, 64, 16, 16 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "tilesets.png 14"
14/texture = ExtResource( 14 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 32, 64, 16, 16 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.72549, 0, 0, 0.588235 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 0.588235 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.584314, 0.584314, 0.584314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.101961, 0.109804, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.309804, 0.309804, 0.309804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.101961, 0.109804, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.101961, 0.109804, 0.172549, 1 )

[sub_resource type="InputEventAction" id=19]
action = "shortcut"
pressed = true

[sub_resource type="ShortCut" id=20]
shortcut = SubResource( 19 )

[node name="cave_01" type="Node2D"]
script = ExtResource( 10 )

[node name="parallax_background" type="ParallaxBackground" parent="."]

[node name="sprite" type="Sprite" parent="parallax_background"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 17 )
centered = false

[node name="parallax_layer5" type="ParallaxLayer" parent="parallax_background"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="sprite" type="Sprite" parent="parallax_background/parallax_layer5"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 8 )
centered = false

[node name="parallax_layer4" type="ParallaxLayer" parent="parallax_background"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="sprite" type="Sprite" parent="parallax_background/parallax_layer4"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 16 )
centered = false

[node name="parallax_layer3" type="ParallaxLayer" parent="parallax_background"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="sprite" type="Sprite" parent="parallax_background/parallax_layer3"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 13 )
centered = false

[node name="parallax_layer2" type="ParallaxLayer" parent="parallax_background"]
motion_scale = Vector2( 0.4, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="sprite" type="Sprite" parent="parallax_background/parallax_layer2"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 12 )
centered = false

[node name="parallax_layer" type="ParallaxLayer" parent="parallax_background"]
motion_scale = Vector2( 0.6, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="sprite" type="Sprite" parent="parallax_background/parallax_layer"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
centered = false

[node name="mist" type="Sprite" parent="parallax_background"]
self_modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 11 )
centered = false

[node name="bg_music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 15 )
volume_db = -6.0
autoplay = true

[node name="now_playing" parent="bg_music" instance=ExtResource( 5 )]

[node name="tile_map" type="TileMap" parent="."]
z_index = -2
tile_set = SubResource( 13 )
cell_size = Vector2( 16, 16 )
collision_layer = 4
collision_mask = 0
format = 1
tile_data = PoolIntArray( 589824, 7, 0, 589825, 7, 0, 589826, 7, 0, 589827, 7, 0, 589828, 7, 0, 589829, 7, 0, 589830, 7, 0, 589831, 7, 0, 589832, 7, 0, 589833, 7, 0, 589834, 7, 0, 589835, 7, 0, 589836, 7, 0, 589837, 7, 0, 589838, 7, 0, 589839, 7, 0, 589840, 7, 0, 589841, 7, 0, 589842, 7, 0, 589843, 7, 0, 589844, 7, 0, 589845, 7, 0, 589846, 7, 0, 589847, 7, 0, 589848, 7, 0, 589849, 7, 0, 589850, 7, 0, 589851, 7, 0, 589852, 7, 0, 589853, 7, 0, 589854, 7, 0, 589855, 7, 0, 589856, 7, 0, 589857, 7, 0, 589858, 7, 0, 589859, 7, 0, 589860, 7, 0, 589861, 7, 0, 589862, 7, 0, 589863, 7, 0, 589864, 7, 0, 589865, 7, 0, 589866, 7, 0, 589867, 7, 0, 589868, 7, 0, 589869, 7, 0, 589870, 7, 0, 589871, 7, 0, 589872, 7, 0, 589873, 7, 0, 589874, 7, 0, 589875, 7, 0, 589876, 7, 0, 589877, 7, 0, 589878, 7, 0, 589879, 7, 0, 589880, 7, 0, 589881, 7, 0, 589882, 7, 0, 589883, 7, 0, 589884, 7, 0, 589885, 7, 0, 589886, 7, 0, 589887, 7, 0, 589888, 7, 0, 589889, 7, 0, 589890, 7, 0, 589891, 7, 0, 589892, 7, 0, 589893, 7, 0, 589894, 7, 0, 589895, 7, 0, 589896, 7, 0, 589897, 7, 0, 589898, 7, 0, 589899, 7, 0, 589900, 7, 0, 589901, 7, 0, 589902, 7, 0, 589903, 7, 0, 589904, 7, 0, 589905, 7, 0, 589906, 7, 0, 589907, 7, 0, 589908, 7, 0, 589909, 7, 0, 589910, 7, 0, 589911, 7, 0, 589912, 7, 0, 589913, 7, 0, 589914, 7, 0, 589915, 7, 0, 589916, 7, 0, 589917, 7, 0, 589918, 7, 0, 589919, 7, 0, 589920, 7, 0, 589921, 7, 0, 589922, 7, 0, 589923, 7, 0, 589924, 7, 0, 589925, 7, 0, 655360, 14, 0, 655361, 14, 0, 655362, 14, 0, 655363, 14, 0, 655364, 14, 0, 655365, 14, 0, 655366, 14, 0, 655367, 14, 0, 655368, 14, 0, 655369, 14, 0, 655370, 14, 0, 655371, 14, 0, 655372, 14, 0, 655373, 14, 0, 655374, 14, 0, 655375, 14, 0, 655376, 14, 0, 655377, 14, 0, 655378, 14, 0, 655379, 14, 0, 655380, 14, 0, 655381, 14, 0, 655382, 14, 0, 655383, 14, 0, 655384, 14, 0, 655385, 14, 0, 655386, 14, 0, 655387, 14, 0, 655388, 14, 0, 655389, 14, 0, 655390, 14, 0, 655391, 14, 0, 655392, 14, 0, 655393, 14, 0, 655394, 14, 0, 655395, 14, 0, 655396, 14, 0, 655397, 14, 0, 655398, 14, 0, 655399, 14, 0, 655400, 14, 0, 655401, 14, 0, 655402, 14, 0, 655403, 14, 0, 655404, 14, 0, 655405, 14, 0, 655406, 14, 0, 655407, 14, 0, 655408, 14, 0, 655409, 14, 0, 655410, 14, 0, 655411, 14, 0, 655412, 14, 0, 655413, 14, 0, 655414, 14, 0, 655415, 14, 0, 655416, 14, 0, 655417, 14, 0, 655418, 14, 0, 655419, 14, 0, 655420, 14, 0, 655421, 14, 0, 655422, 14, 0, 655423, 14, 0, 655424, 14, 0, 655425, 14, 0, 655426, 14, 0, 655427, 14, 0, 655428, 14, 0, 655429, 14, 0, 655430, 14, 0, 655431, 14, 0, 655432, 14, 0, 655433, 14, 0, 655434, 14, 0, 655435, 14, 0, 655436, 14, 0, 655437, 14, 0, 655438, 14, 0, 655439, 14, 0, 655440, 14, 0, 655441, 14, 0, 655442, 14, 0, 655443, 14, 0, 655444, 14, 0, 655445, 14, 0, 655446, 14, 0, 655447, 14, 0, 655448, 14, 0, 655449, 14, 0, 655450, 14, 0, 655451, 14, 0, 655452, 14, 0, 655453, 14, 0, 655454, 14, 0, 655455, 14, 0, 655456, 14, 0, 655457, 14, 0, 655458, 14, 0, 655459, 14, 0, 655460, 14, 0, 655461, 14, 0, 720896, 14, 0, 720897, 14, 0, 720898, 14, 0, 720899, 14, 0, 720900, 14, 0, 720901, 14, 0, 720902, 14, 0, 720903, 14, 0, 720904, 14, 0, 720905, 14, 0, 720906, 14, 0, 720907, 14, 0, 720908, 14, 0, 720909, 14, 0, 720910, 14, 0, 720911, 14, 0, 720912, 14, 0, 720913, 14, 0, 720914, 14, 0, 720915, 14, 0, 720916, 14, 0, 720917, 14, 0, 720918, 14, 0, 720919, 14, 0, 720920, 14, 0, 720921, 14, 0, 720922, 14, 0, 720923, 14, 0, 720924, 14, 0, 720925, 14, 0, 720926, 14, 0, 720927, 14, 0, 720928, 14, 0, 720929, 14, 0, 720930, 14, 0, 720931, 14, 0, 720932, 14, 0, 720933, 14, 0, 720934, 14, 0, 720935, 14, 0, 720936, 14, 0, 720937, 14, 0, 720938, 14, 0, 720939, 14, 0, 720940, 14, 0, 720941, 14, 0, 720942, 14, 0, 720943, 14, 0, 720944, 14, 0, 720945, 14, 0, 720946, 14, 0, 720947, 14, 0, 720948, 14, 0, 720949, 14, 0, 720950, 14, 0, 720951, 14, 0, 720952, 14, 0, 720953, 14, 0, 720954, 14, 0, 720955, 14, 0, 720956, 14, 0, 720957, 14, 0, 720958, 14, 0, 720959, 14, 0, 720960, 14, 0, 720961, 14, 0, 720962, 14, 0, 720963, 14, 0, 720964, 14, 0, 720965, 14, 0, 720966, 14, 0, 720967, 14, 0, 720968, 14, 0, 720969, 14, 0, 720970, 14, 0, 720971, 14, 0, 720972, 14, 0, 720973, 14, 0, 720974, 14, 0, 720975, 14, 0, 720976, 14, 0, 720977, 14, 0, 720978, 14, 0, 720979, 14, 0, 720980, 14, 0, 720981, 14, 0, 720982, 14, 0, 720983, 14, 0, 720984, 14, 0, 720985, 14, 0, 720986, 14, 0, 720987, 14, 0, 720988, 14, 0, 720989, 14, 0, 720990, 14, 0, 720991, 14, 0, 720992, 14, 0, 720993, 14, 0, 720994, 14, 0, 720995, 14, 0, 720996, 14, 0, 720997, 14, 0 )

[node name="characters" type="Node2D" parent="."]

[node name="player" parent="characters" instance=ExtResource( 3 )]
position = Vector2( 65, 140 )

[node name="enemies" type="Node2D" parent="."]

[node name="goblin" parent="enemies" instance=ExtResource( 9 )]
position = Vector2( 974, 140 )

[node name="goblin2" parent="enemies" instance=ExtResource( 9 )]
position = Vector2( 989, 140 )

[node name="goblin3" parent="enemies" instance=ExtResource( 9 )]
position = Vector2( 1006, 140 )

[node name="goblin4" parent="enemies" instance=ExtResource( 9 )]
position = Vector2( 1021, 140 )

[node name="goblin5" parent="enemies" instance=ExtResource( 9 )]
position = Vector2( 1036, 140 )

[node name="goblin6" parent="enemies" instance=ExtResource( 9 )]
position = Vector2( 1052, 140 )

[node name="goblin7" parent="enemies" instance=ExtResource( 9 )]
position = Vector2( 1068, 140 )

[node name="goblin8" parent="enemies" instance=ExtResource( 9 )]
position = Vector2( 1083, 140 )

[node name="goblin9" parent="enemies" instance=ExtResource( 9 )]
position = Vector2( 1098, 140 )

[node name="goblin10" parent="enemies" instance=ExtResource( 9 )]
position = Vector2( 1114, 140 )

[node name="goblin11" parent="enemies" instance=ExtResource( 9 )]
position = Vector2( 1130, 140 )

[node name="goblin12" parent="enemies" instance=ExtResource( 9 )]
position = Vector2( 1146, 140 )

[node name="goblin13" parent="enemies" instance=ExtResource( 9 )]
position = Vector2( 1162, 140 )

[node name="slime_green2" parent="enemies" instance=ExtResource( 18 )]
position = Vector2( 305, 140 )

[node name="slime_green3" parent="enemies" instance=ExtResource( 18 )]
position = Vector2( 442, 140 )

[node name="slime_green4" parent="enemies" instance=ExtResource( 18 )]
position = Vector2( 576, 140 )

[node name="slime_green5" parent="enemies" instance=ExtResource( 18 )]
position = Vector2( 848, 140 )

[node name="slime_green6" parent="enemies" instance=ExtResource( 18 )]
position = Vector2( 817, 140 )

[node name="projectiles" type="Node2D" parent="."]

[node name="objects" type="Node2D" parent="."]

[node name="treasure_end" parent="objects" instance=ExtResource( 4 )]
position = Vector2( 1425, 140 )

[node name="timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="gui" type="CanvasLayer" parent="."]

[node name="blood_stained" type="Panel" parent="gui"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retry_btn" parent="gui" instance=ExtResource( 6 )]
pause_mode = 2
visible = false

[node name="skill_tutorial" type="Panel" parent="gui"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skill_icon" type="TextureRect" parent="gui/skill_tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 8, 16 )
texture = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="gui/skill_tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -26.0
margin_right = 190.0
margin_bottom = 39.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 190, 72 )
custom_fonts/font = ExtResource( 20 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
text = "Skill Unlocked: Buff
Effect: Enlarge the Sword Massively
(can only be used when there's no nearby enemy)
Mana Cost: 40 Mana"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skill_btn" type="Button" parent="gui/skill_tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -12.0
margin_right = 28.0
margin_bottom = 12.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 28, 120 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
custom_fonts/font = ExtResource( 20 )
custom_colors/font_color = Color( 0.101961, 0.109804, 0.172549, 1 )
custom_colors/font_color_hover = Color( 0.101961, 0.109804, 0.172549, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.109804, 0.172549, 1 )
shortcut_in_tooltip = false
shortcut = SubResource( 20 )
text = "OK!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hint_lbl" type="Label" parent="gui/skill_tutorial/skill_btn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 18.0
margin_right = 100.0
margin_bottom = 32.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 100, 7 )
custom_fonts/font = ExtResource( 20 )
custom_colors/font_color = Color( 0.545098, 0.545098, 0.545098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
text = "or click space to continue"

[node name="btn_click" type="AudioStreamPlayer" parent="gui"]
stream = ExtResource( 2 )
volume_db = 8.0

[node name="tut_pop" type="AudioStreamPlayer" parent="gui"]
pause_mode = 2
stream = ExtResource( 7 )
volume_db = -4.0
pitch_scale = 0.9
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="gui/retry_btn" to="." method="_on_retry_btn_pressed"]
[connection signal="pressed" from="gui/skill_tutorial/skill_btn" to="." method="_on_skill_btn_pressed"]
